# front/src/lib/types/chat.ts
@@ -1,19 +1,0 @@
-export type RegisterUserRequest = {
-    user_id: string;
-    room_id: string;
-    nickname: string;
-};
-
-export type User = {
-    userId: string;
-    nickname: string;
-    joinedAt: string;
-};
-
-export type Room = {
-    id: string;
-    users: User[];
-    lockedBy?: string;
-    createdAt: string;
-    updatedAt: string;
-};
